# hob_hud_mcp

./: .env.example  INGESTION_GUIDE.md  README.md  convert_archive.py  mistral_embedder.py  pyproject.toml  requirements.txt  server.py
src/hob_hud_mcp/: __init__.py  connections.py  server.py  utils.py
src/hob_hud_mcp/tools/: pipeline_ingest.py  pipeline_tools.py  raw_graph.py  raw_mongo.py  raw_vector.py
